# pathfinder

./: CMakeLists.txt  README.md  package-lock.json  package.json
lib/tinyobjloader/: CMakeLists.txt  tiny_obj_loader.h
src/: CMakeLists.txt  index.tsx  main.cpp
src/3D/: CMakeLists.txt  Face.h  Vector3.h  Vertex.h
src/3D/BoundingBox/: BoundingBox.cpp  BoundingBox.h
src/3D/Buffer/: Buffer.h  BufferObject.h
src/3D/Light/: DirectLight.cpp  DirectLight.h  Light.cpp  Light.h
src/3D/Material/: Material.cpp  Material.h  ModelMaterial.cpp  ModelMaterial.h
src/3D/Mesh/: Mesh.cpp  Mesh.h
src/3D/Model/: Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h
src/3D/Rotation/: RotationController.cpp  RotationController.h
src/3D/Texture/: Texture.h  TextureLoader.cpp  TextureLoader.h  TextureMap.cpp  TextureMap.h
src/Model/: BezierCurve.cpp  BezierCurve.h  BezierCurve.ts  CBezierCurve.cpp  CBezierCurve.h  CBoundingBox.cpp  CBoundingBox.h  CCell.h  CGrid.cpp  CGrid.h  CMakeLists.txt  CMesh.cpp  CMesh.h  CObstacle.cpp  CObstacle.h  CVector3.h  Cell.cpp  Cell.h  Cell.ts  Coords.ts  Grid.cpp  Grid.h  Grid.ts  Obstacle.cpp  Obstacle.h  Obstacle.ts  Vertex.h  atoms.ts  СCell.cpp
src/Service/: C3dsLoader.cpp  C3dsLoader.h  CFileLoader.cpp  CFileLoader.h  CLib3dsLoader.cpp  CLib3dsLoader.h  CMakeLists.txt  CObjLoader.cpp  CObjLoader.h  FileLoader.cpp  FileLoader.h  IMeshLoader.h  ObjLoader.cpp  ObjLoader.h
src/View/: CMakeLists.txt  COpenGLWidget.cpp  COpenGLWidget.h  CVector3f.h  CWindow.cpp  CWindow.h  Controls.tsx  SandboxView.tsx  SceneView.tsx  Space.cpp  Space.h  Window.cpp  Window.h
src/View/components/: CameraControls.tsx  EditToolbar.tsx  FPSMovement.tsx  GridDisplay.tsx
src/ViewModel/: CGridViewModel.cpp  CGridViewModel.h  CMakeLists.txt  GridViewModel.cpp  GridViewModel.h  PathfindingViewModel.ts  PathfindingViewModelContext.ts  SandboxViewModel.ts  SandboxViewModelContext.ts  ViewModelContext.ts
test/: BezierCurve_test.cpp  CMakeLists.txt  FileLoader_test.cpp  Grid_test.cpp  MockMeshLoader.h
