add_library(3D STATIC
        Vector3.h
        Vertex.h
        BoundingBox/BoundingBox.cpp
        Mesh/Mesh.cpp
        Mesh/Mesh.h
        Face.h
        Buffer/Buffer.h
        Buffer/BufferObject.h
        Light/DirectLight.cpp
        Light/DirectLight.h
        Light/Light.cpp
        Light/Light.h
        Material/Material.cpp
        Material/Material.h
        Model/Model.h
        Model/Model.cpp
        Texture/Texture.h
        Texture/TextureMap.cpp
        Texture/TextureMap.h
        Rotation/RotationController.cpp
        Rotation/RotationController.h
        Material/ModelMaterial.cpp
        Material/ModelMaterial.h
        Texture/TextureLoader.cpp
        Texture/TextureLoader.h
        Model/ModelRenderer.cpp
        Model/ModelRenderer.h
)

target_link_libraries(3D
        PRIVATE
        SOIL
        Qt6::Core
        Qt6::Gui
        Qt6::OpenGL
)

target_include_directories(3D 
    PUBLIC 
        ${CMAKE_CURRENT_SOURCE_DIR}
    PRIVATE
        ${Qt6Core_INCLUDE_DIRS}
        ${Qt6Gui_INCLUDE_DIRS}
        ${Qt6OpenGL_INCLUDE_DIRS}
        ${Qt6OpenGLWidgets_INCLUDE_DIRS}
)
